# shader-oop

./: .gitmodules  CMakeLists.txt  main.cpp
share/glad/: CMakeLists.txt
share/glad/include/glad/: glad.h
share/glad/src/: glad.c
